# student_clinic_scheduler

./: .gitignore  CMakeLists.txt  README.md  SCS.py  app.py  attendance.csv  gui.py  main.cpp  main.py  responses 2.csv  responses.csv  tracker 1.csv  tracker.csv
